--- a/src/Forms/SolutionConnectionReferenceReassignmentControl.resx
+++ b/src/Forms/SolutionConnectionReferenceReassignmentControl.resx
@@ -120,6 +120,63 @@
   <metadata name="toolStripMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="imgl_TreeViewIcons.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>215, 21</value>
+  </metadata>
+  <data name="imgl_TreeViewIcons.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADc
+        CgAAAk1TRnQBSQFMAgEBBAEAARgBAAEYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ASgAB/wHx
+        AgcB8QH/BgAB9AHtCuwB7QH0FAAB9AEHDwABBwERAQAC6wEAAREBBwUAAe0BQwrsAUMB7QIAAd0DGQEJ
+        AQADcgEAAfQHAAH0AQAB9wwAAf8BkgFtAe8B6gL/AeoB7wHqAZIB/wMAAuwKAALsAgAFGQG7BHIBGQgA
+        AfgBAAHvCwABvAFtAf8B6wHxAgAB8QHrAf8BbQG8AwAC7AoAAuwCAAH/AdsEGQEJBHIBGQH/BgAB8gFD
+        AeoB9wkAAf8BEAHsAe8BDgGSAu8BkgEOAe8B7AEQAf8CAALsCgAC7AQAAQkEGQG0BHIBGQYAAf8BFAHy
+        AeoB9wgAAfEBEwEHAfcBEQQHAREB9wEHARMB8gIAAuwKAALsBAAB9AUZAQkEcgHzBgABBwHtAf8B6gH3
+        BwABBwH3AQAB8wHqBAAB6gHzAQAB9wEHAgAC7AoAAuwFAAHzBhkEcgH0AwABFQIAAUMBAAH/ARIB7wYA
+        AQcB9wEAAfMB6gQAAeoB8wEAAfcBBwIAAuwCAAH/ARECAAFDAwAC7AQAAf8BuwHbBhkDcgHzAwAB7wHt
+        BAAB/wHqAfcFAAHxARQB7wHtARAE7wEQAe0B7wEUAfECAALsAwAB8gLxAfMDAALsBAABGQLvAbQEGQEJ
+        AnIBGQQAAf8BEQH0AwAB8gG8AQ4B7wQAAf8BEAGSAQcBDgHvAgcB7wEOAQcBkgEQAf8CAAHsAeoK8QHq
+        AewDAAH/AdwD7wG0BBkBuwHzBgABBwHrAwABFAETAewBkgUAAbwBbQH/AesB8QIAAfEB6wH/AW0BvAMA
+        Ae8MAAH3AwABtAXvAbQCGQEJAf8HAAH/ARQB8gIAAfEBFAH/BgAB/wHtAW0B7wHqAv8B6gHvAW0BkgH/
+        AwAB/wEQAfcIAAH3ARAB/wIAAf8B3AXvAdwBugEJAf8JAAHxARMB/wIAAesBBwcAAf8BBwERAQAC6wEA
+        AREBBwYAAfABAAjsAQAB8BgAAW0B7wLxAQcBDwH/CAAB/wHyAgcB8gH/BwAB/wEHCOwBBxkAAfQF7AH0
+        QwABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/4EACP8B+AEfAYABAQL/AecB/wHw
+        AQ8BgAEBAYABDwHjAf8BwAEDAZ8B+QGAAQ8B8QH/AcEBgwGfAfkBgAEDAfAB/wGAAQEBnwH5AeABAwHw
+        AX8BgAEBAZ8B+QHgAQEB+AE/AZMByQGfAfkB8AEAAeEBHwGTAckBmAE5AeABAAHnAY8BgAEBAZwBOQHg
+        AQEB4wGHAYABAQGAAQEBwAEDAfMBhwHBAYMBgAEBAcABBwHxAY8BwAEDAY8B8QGAAQ8B+AHPAeABDwHA
+        AQMC/wH8AQcB+AEfAcABBwL/AfwBBwj/Cw==
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>81</value>
   </metadata>
